[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "podlens"
version = "1.0.0"
description = "播客转录与摘要工具，支持 Apple Podcast 和 YouTube 平台"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PodLens Team", email = "contact@podlens.app"}
]
maintainers = [
    {name = "PodLens Team", email = "contact@podlens.app"}
]
keywords = ["podcast", "transcription", "summary", "youtube", "apple podcast", "whisper", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "feedparser>=6.0.0",
    "python-dotenv",
    "google-generativeai",
    "beautifulsoup4",
    "tqdm",
    "mlx-whisper",
    "groq",
    "openai-whisper",
    "youtube-transcript-api",
    "yt-dlp",
]

[project.scripts]
podlens-zh = "podlens.cli_ch:main"
podlens-en = "podlens.cli_en:main"
podlens-ch = "podlens.cli_ch:main"
podlens = "podlens.cli_en:main"

[project.urls]
Homepage = "https://github.com/henryzha/podlens"
Repository = "https://github.com/henryzha/podlens.git"
Documentation = "https://github.com/henryzha/podlens#readme"
"Bug Tracker" = "https://github.com/henryzha/podlens/issues"

[tool.setuptools]
packages = ["podlens"]

[tool.setuptools.package-data]
podlens = ["*.py"] 